# ClaimGuard

./: .gitignore  README.md  package.json  sst-env.d.ts  sst.config.ts
AI/: interviewTestimonyAI.py  toonnx.py
AI/Claims/: claims.py
backend/: README.md  drizzle.config.ts  package.json
backend/src/: ai.ts  index.ts  queue.ts  subscriber.ts
backend/src/db/: index.ts  schema.ts
backend/src/lib/: aws.ts  ffmpeg.ts
frontend/: index.html  package.json
frontend/src/: api.ts  main.tsx  sst-env.d.ts
frontend/src/components/: dataView.tsx  navbar.tsx  upload.tsx
frontend/src/lib/: file-item.tsx
frontend/src/routes/: claims.tsx  home.tsx  root.tsx  upload.tsx
model/: Cargo.toml
model/src/: main.rs
sst_sdk/: Cargo.toml
sst_sdk/src/: lib.rs
