[package]
name = "model"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.73.0"
axum = "0.8.1"
image = "0.25.5"
lambda_http = "0.13.0"
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.9", features = ["download-binaries"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sst_sdk = { path = "../sst_sdk/" }
tokio = { version = "1", features = ["macros"] }
uuid = { version = "1.13.1", features = ["v4"] }
